# active-inference

./: .gitignore  README.md  pyproject.toml
analysis/: README.md  __init__.py
analysis/dev/: __init__.py  extract_param_spec_map.py  grep_spec_attribute_reads.py  list_dead_spec_fields.py
analysis/neural/: __init__.py  a_mn_oscillator_smoke.py
analysis/plots/: __init__.py  worm_continuous.py  worm_decay.py  worm_instability.py  worm_kymograph.py  worm_long_run.py
docs/: INDEX.md  REFERENCE.md
docs/architecture/: module-layout.md  overview.md
docs/c-elegans/: agar-plate-environment.md  biological-constants.md  engine-factory.md  interactive-viewer.md  lab-parity.md  mujoco-body.md  neuromuscular-junction.md  overview.md  s-wave-analysis.md  sensor-encoder.md  tonic-fwd-motor-collapse.md
docs/config/: adding-organism.md  dependencies.md  motor-constants.md  nervous-system-constants.md  neuron-presets.md
docs/connectome/: build-paula-network.md  celegans-loader.md  connectome-data.md
docs/data-logging/: evolved-configs.md  run-logs.md
docs/engine/: interfaces.md  sensorimotor-loop.md  simulation-engine.md
docs/evolution/: algorithm.md  fitness-function.md  output.md  parameter-space.md
docs/motor-decoding/: overview.md
docs/neuromodulation/: dual-ema-filter.md  overview.md  per-synapse-modulation.md  tonic-drives.md  volume-transmission.md
docs/paula/: ablation.md  neuron-network.md  neuron-parameters.md  neuron-state.md  tick-method.md  (+1 more)
scripts/: analyze_neuromod_food_seeking.py  apply_evolved_config.py  download_connectome.py  evolve_food_seeking.py  run_c_elegans.py  run_zebrafish.py
simulations/: __init__.py  base_body.py  base_environment.py  base_nervous_system.py  connectome_loader.py  engine.py  evol_trace.py  paula_loader.py  run_log.py  sensorimotor_loop.py  types.py
(+63 files in other folders)
