[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "active-inference"
version = "0.1.0"
description = "C. elegans active inference sensorimotor simulation using PAULA neurons"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "mujoco>=3.2",
    "loguru>=0.7",
    "networkx>=3.3",
    "pandas>=2.2",
    "scipy>=1.13",
    "matplotlib>=3.9",
    "tqdm>=4.66",
    # OpenWorm ConnectomeToolbox (cect) — installed from GitHub
    "cect @ git+https://github.com/openworm/ConnectomeToolbox.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ipython>=8.0",
]
trace = [
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["simulations"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
# Require Python 3.11+ for the virtual environment
required-version = ">=0.5"
